--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<header class="header">
+  <div class="header__logo">
+    <img src="../../../assets/header-logo.svg" alt="Логотип ">
+  </div>
+  <div class="header__nav">
+    <a href="#main">Главная</a>
+    <a href="#about">О нас</a>
+    <a href="#amenities">Наши услуги</a>
+    <a href="#info">Информация</a>
+    <a href="#reviews">Отзывы</a>
+    <a href="#contacts">Контакты</a>
+  </div>
+  <div class="header__phone">
+    <a href="+7-777-777-77-77">+7-777-777-77-77</a>
+  </div>
+</header>
