--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,6 @@
-<p>main works!</p>
+<app-intro></app-intro>
+<app-about></app-about>
+<app-amenities></app-amenities>
+<app-info></app-info>
+<app-reviews></app-reviews>
+<app-contacts></app-contacts>
