--- a/src/app/components/main/intro/intro.component.html
+++ b/src/app/components/main/intro/intro.component.html
@@ -1,1 +1,23 @@
-<p>intro works!</p>
+<section class="intro">
+  <div class="intro-content">
+    <div class="intro-block">
+      <h1 class="title">Мы защищаем Ваши интересы в России </h1>
+      <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+      <input type="button" class="get" value="Получить консультацию">
+    </div>
+    <div class="score">
+      <div class="score-box">
+        <p class="score-box__title">20</p>
+        <p class="score-box__text">Всего лет на рынке</p>
+      </div>
+      <div class="score-box">
+        <p class="score-box__title">20</p>
+        <p class="score-box__text">Выиграных дел</p>
+      </div>
+      <div class="score-box">
+        <p class="score-box__title">20</p>
+        <p class="score-box__text">Дел в производстве</p>
+      </div>
+    </div>
+  </div>
+</section>
